--- a/LocationUpdateTest/app/build.gradle
+++ b/LocationUpdateTest/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.hansoolabs.test.locationupdatetest"
+        applicationId "com.hansoolabs.test.locationupdate"
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
@@ -44,9 +44,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     // common
-    compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.google.android.gms:play-services:10.2.0'
+    compile 'com.google.android.gms:play-services-location:10.2.0'
+    compile 'com.google.android.gms:play-services-maps:10.2.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     // logback
@@ -62,4 +62,3 @@ dependencies {
 
 }
 
-apply plugin: 'com.google.gms.google-services'
