--- a/LocationUpdateTest/app/src/main/AndroidManifest.xml
+++ b/LocationUpdateTest/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hansoolabs.test.locationupdatetest">
+    package="com.hansoolabs.test.locationupdate">
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -18,7 +18,6 @@
         android:required="true"/>
 
     <application
-        android:name=".MyApplication"
         android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -29,7 +28,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/my_map_key"/>
 
-        <activity android:name=".SplashActivity" android:screenOrientation="portrait">
+        <activity android:name="com.hansoolabs.test.locationupdate.SplashActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,9 +36,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MainActivity" android:screenOrientation="portrait"/>
+        <activity android:name="com.hansoolabs.test.locationupdate.MainActivity" android:screenOrientation="portrait"/>
 
-        <service android:name=".MyRecognitionIntentService" />
+        <service android:name="com.hansoolabs.test.locationupdate.MyRecognitionIntentService" />
 
 
 
