--- a/LocationUpdateTest/app/build.gradle
+++ b/LocationUpdateTest/app/build.gradle
@@ -51,11 +51,12 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
+    compile 'com.google.code.gson:gson:2.7'
 
     // common
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.google.android.gms:play-services-location:10.2.0'
-    compile 'com.google.android.gms:play-services-maps:10.2.0'
+    compile 'com.android.support:appcompat-v7:25.3.0'
+    compile 'com.google.android.gms:play-services-location:10.2.1'
+    compile 'com.google.android.gms:play-services-maps:10.2.1'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     // logback
